# biotracekit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: mvp_plan.md  project_brief.md  research_notes.md  roadmap.md  web_reviewer_notes.md
examples/rnaseq/: README.md  main.nf  nextflow.config  samples.tsv
src/biotracekit/: __init__.py  cli.py  report.py  scanner.py
tests/: test_scanner.py
web/: app.js  index.html  sample-dossier.json  styles.css
